tests/snapshots/regression_test__tests__short_python_split_graphemes_true_strip_whitespace_true.snap
---
source: tests/regression_test.rs
expression: snapshot_string
---
New(Line={line_index=4, entries=
[
    Entry{'n', start=(4, 12), end=(4, 13)}
    Entry{'o', start=(4, 13), end=(4, 14)}
    Entry{'t', start=(4, 14), end=(4, 15)}
]}
)
New(Line={line_index=8, entries=
[
    Entry{'x', start=(8, 4), end=(8, 5)}
    Entry{'=', start=(8, 10), end=(8, 11)}
    Entry{'1', start=(8, 12), end=(8, 13)}
]}
)
